--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   background-color: #F2F2F2;
   font-family: helvetica, sans-serif;
@@ -5,15 +12,47 @@ body {
 
 .box {
   width: 350px;
+  height: 430px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: white;
   position: relative;
-  border: 1px solid black;
   margin: 50px;
-  font-weight: 300;
+  overflow: hidden;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.box:hover {
+  -webkit-box-shadow: 1px 1px 12px #555;
+          box-shadow: 1px 1px 12px #555;
+}
+
+.box:hover .bottom {
+  -webkit-transform: translateY(-65%);
+          transform: translateY(-65%);
+}
+
+.box:hover img {
+  -webkit-transform: scale(1.2, 1.2);
+          transform: scale(1.2, 1.2);
+  opacity: 0.5;
+}
+
+.top {
+  width: 100%;
+  height: 260px;
 }
 
 img {
-  width: 350px;
+  width: 100%;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .date {
@@ -23,27 +62,33 @@ img {
   top: 15px;
   right: 10px;
   color: white;
+  background-color: red;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
 }
 
-.circle {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background-color: red;
-  border-radius: 50%;
-}
-
-section {
+.bottom {
+  width: 100%;
+  height: 170px;
   position: relative;
-  padding: 20px 30px 10px 30px;
+  background-color: white;
+  padding: 30px;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .tab {
   position: absolute;
-  top: -35px;
+  top: -38px;
   left: 0;
   background-color: red;
   color: white;
@@ -69,21 +114,29 @@ article {
   color: #9B9A98;
   margin-top: 30px;
   font-weight: 300;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
-.bottom {
+.icons {
+  width: 100%;
+  background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   color: #9B9A98;
   font-weight: 300;
+  padding: 20px 30px;
+  z-index: 1;
+  position: absolute;
+  bottom: 0;
 }
 
-.bottom p {
+.icons p {
   margin-right: 15px;
 }
 
-.bottom i {
-  margin-right: 3px;
+.icons i {
+  margin-right: 5px;
 }
 /*# sourceMappingURL=style.css.map */
