--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,8 +1,14 @@
 $box-red: red;
 $box-grey: #9B9A98;
-$box-width: 350px;
 $title-margin: 8px;
 $font-weight: 300;
+$transition-delay: 0.5s;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     background-color: #F2F2F2;
@@ -10,16 +16,36 @@ body {
 }
 
 .box {
-    width: $box-width;
+    width: 350px;
+    height: 430px;
+    display: flex;
+    flex-direction: column;
     background-color: white;
     position: relative;
-    border: 1px solid black;
     margin: 50px;
-    font-weight: 300;
+    overflow: hidden;
+    transition: all $transition-delay;
+}
+
+.box:hover {
+    box-shadow: 1px 1px 12px #555;
+    .bottom {
+        transform: translateY(-65%);
+    }
+    img {
+        transform: scale(1.2, 1.2);
+        opacity: 0.5;
+    }
+}
+
+.top {
+    width: 100%;
+    height: 260px;
 }
 
 img {
-    width: $box-width;
+    width: 100%;
+    transition: all $transition-delay;
 }
 
 .date {
@@ -28,30 +54,30 @@ img {
     position: absolute;
     top: 15px;
     right: 10px;
-    // background-color: $box-red;
     color: white;
-    // border-radius: 50%;
+    background-color: $box-red;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
-.circle {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: $box-red;
-    border-radius: 50%;
-}
-
-section {
+.bottom {
+    width: 100%;
+    height: 170px;
     position: relative;
-    padding: 20px 30px 10px 30px;
+    background-color: white;
+    padding: 30px;
+    transition: all $transition-delay;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: flex-end;
 }
 
 .tab {
     position: absolute;
-    top: -35px;
+    top: -38px;
     left: 0;
     background-color: $box-red;
     color: white;
@@ -77,16 +103,24 @@ article {
     color: $box-grey;
     margin-top: 30px;
     font-weight: $font-weight;
+    transition: all $transition-delay;
 }
 
-.bottom {
+.icons {
+    width: 100%;
+    background-color: white;
     display: flex;
     color: $box-grey;
     font-weight: $font-weight;
+    // margin-top: 25px;
+    padding: 20px 30px;
+    z-index: 1;
+    position: absolute;
+    bottom: 0;
     p {
         margin-right: 15px;
     }
     i {
-        margin-right: 3px;
+        margin-right: 5px;
     }
 }
